# INF568-chacha20_poly1305_aead

./: .gitignore  Cargo.toml  Makefile  README.md  aead_wrap  chacha20
src/: lib.rs  main.rs
src/lib/: chacha20.rs  chacha_poly_aed.rs  poly1305.rs
tests/: aead_unwrap.rs  aead_wrap.rs  chacha20.rs  poly1305_check.rs  poly1305_gen.rs
tests/samples/: urandom0  urandom1  urandom10  urandom13  urandom15  urandom17  urandom19  urandom20  urandom22  urandom24  urandom25  urandom27  urandom28  urandom29  urandom30  urandom31  urandom36  urandom4  urandom40  urandom41  urandom48  urandom49  urandom5  urandom53  urandom6  urandom60  urandom61  urandom64  urandom65  urandom69  urandom70  urandom71  urandom72  urandom73  urandom74  urandom76  urandom78  urandom80  urandom82  urandom83  (+11 more)
tests/samples/poly1305/: urandom11  urandom12  urandom14  urandom16  urandom18  urandom2  urandom21  urandom23  urandom26  urandom3  urandom32  urandom33  urandom34  urandom35  urandom37  urandom38  urandom39  urandom42  urandom43  urandom44  urandom45  urandom46  urandom47  urandom50  urandom51  urandom52  urandom54  urandom55  urandom56  urandom57  urandom58  urandom59  urandom62  urandom63  urandom66  urandom67  urandom68  urandom7  urandom75  urandom77  (+10 more)
